Add thumbnail URL to asset data
